kubernetes/overlays/staging/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: quicklookup
spec:
    template:
        spec:
            containers:
                - name: quicklookup
                  resources:
                      requests:
                          memory: 64Mi
                          cpu: 0.1
                      limits:
                          memory: 256Mi
                          cpu: 0.5
