kubernetes/overlays/staging/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: quicklookup
    annotations:
        # nginx ingress
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/rewrite-target: /$1
        # cert-manager
        ingress.kubernetes.io/ssl-redirect: "true"
        cert-manager.io/cluster-issuer: clusterissuer-letsencrypt-production
        # external-dns
        external-dns.alpha.kubernetes.io/hostname: quicklookup.info
        # CORS
        nginx.ingress.kubernetes.io/enable-cors: "false"
        nginx.ingress.kubernetes.io/cors-allow-origin: "*"

spec:
    rules:
        - host: quicklookup.info
          http:
              paths:
                  - path: /(.*)
                    backend:
                        serviceName: quicklookup
                        servicePort: http
    tls:
        - hosts:
              - quicklookup.info
          secretName: quicklookup-tls-secret
